Html rework: simplified/reduced tags used

--- a/index.html
+++ b/index.html
@@ -13,194 +13,97 @@
     <div class="container">
         <div class="menu">
             <button id="game_start">Shuffle</button>
-            <div class="dropdown"><button id="info">How to Play</button>
+            <div class="dropdown">
+                <button id="info">How to Play</button>
                 <div class="dropdown-content">
                     <p><b>Game Rules</b><br><br>
                         Below, you find a set of cards facing down. The goal of the game is to have all cards facing up.<br><br>
-                        You accomplish this by finding pairs. If two consecutively flipped cards are identical, they remain up.<br>
+                        You accomplish this by finding pairs. If two consecutively flipped cards are identical, they
+                        remain up.<br>
                         If not, they'll both turn down again.<br><br>
                         You can flip a card by clicking it. </p>
                 </div>
             </div>
-
         </div>
 
         <div class="flip-box">
-            <div class="flip-box-inner">
-                <div class="flip-box-front">
-                    <img class="cards" alt="card" src="images/card-back.png" >
-                </div>
-                <div class="flip-box-back">
-                    <img class="cards arcana" alt="card" src="" >
-                </div>
-            </div>
+            <img class="cards" alt="card" src="images/card-back.png">
+            <img class="cards arcana" alt="card" src="">
         </div>
 
         <div class="flip-box">
-            <div class="flip-box-inner">
-                <div class="flip-box-front">
-                    <img class="cards" alt="card" src="images/card-back.png" >
-                </div>
-                <div class="flip-box-back">
-                    <img class="cards arcana" alt="card" src="" >
-                </div>
-            </div>
+            <img class="cards" alt="card" src="images/card-back.png">
+            <img class="cards arcana" alt="card" src="">
         </div>
 
         <div class="flip-box">
-            <div class="flip-box-inner">
-                <div class="flip-box-front">
-                    <img class="cards" alt="card" src="images/card-back.png" >
-                </div>
-                <div class="flip-box-back">
-                    <img class="cards arcana" alt="card" src="" >
-                </div>
-            </div>
+            <img class="cards" alt="card" src="images/card-back.png">
+            <img class="cards arcana" alt="card" src="">
         </div>
 
         <div class="flip-box">
-            <div class="flip-box-inner">
-                <div class="flip-box-front">
-                    <img alt="card" src="images/card-back.png" >
-                </div>
-                <div class="flip-box-back">
-                    <img class="cards arcana" alt="card" src="" >
-                </div>
-            </div>
+            <img class="cards" alt="card" src="images/card-back.png">
+            <img class="cards arcana" alt="card" src="">
         </div>
 
         <div class="flip-box">
-            <div class="flip-box-inner">
-                <div class="flip-box-front">
-                    <img class="cards" alt="card" src="images/card-back.png" >
-                </div>
-                <div class="flip-box-back">
-                    <img class="cards arcana" alt="card" src="" >
-                </div>
-            </div>
+            <img class="cards" alt="card" src="images/card-back.png">
+            <img class="cards arcana" alt="card" src="">
         </div>
 
         <div class="flip-box">
-            <div class="flip-box-inner">
-                <div class="flip-box-front">
-                    <img class="cards" alt="card" src="images/card-back.png" >
-                </div>
-                <div class="flip-box-back">
-                    <img class="cards arcana" alt="card" src="" >
-                </div>
-            </div>
+            <img class="cards" alt="card" src="images/card-back.png">
+            <img class="cards arcana" alt="card" src="">
         </div>
 
         <div class="flip-box">
-            <div class="flip-box-inner">
-                <div class="flip-box-front">
-                    <img class="cards" alt="card" src="images/card-back.png" >
-                </div>
-                <div class="flip-box-back">
-                    <img class="cards arcana" alt="card" src="" >
-                </div>
-            </div>
+            <img class="cards" alt="card" src="images/card-back.png">
+            <img class="cards arcana" alt="card" src="">
         </div>
 
         <div class="flip-box">
-            <div class="flip-box-inner">
-                <div class="flip-box-front">
-                    <img class="cards" alt="card" src="images/card-back.png" >
-                </div>
-                <div class="flip-box-back">
-                    <img class="cards arcana" alt="card" src="" >
-                </div>
-            </div>
+            <img class="cards" alt="card" src="images/card-back.png">
+            <img class="cards arcana" alt="card" src="">
         </div>
 
         <div class="flip-box">
-            <div class="flip-box-inner">
-                <div class="flip-box-front">
-                    <img class="cards" alt="card" src="images/card-back.png" >
-                </div>
-                <div class="flip-box-back">
-                    <img class="cards arcana" alt="card" src="" >
-                </div>
-            </div>
+            <img class="cards" alt="card" src="images/card-back.png">
+            <img class="cards arcana" alt="card" src="">
         </div>
 
         <div class="flip-box">
-            <div class="flip-box-inner">
-                <div class="flip-box-front">
-                    <img class="cards" alt="card" src="images/card-back.png" >
-                </div>
-                <div class="flip-box-back">
-                    <img class="cards arcana" alt="card" src="" >
-                </div>
-            </div>
+            <img class="cards" alt="card" src="images/card-back.png">
+            <img class="cards arcana" alt="card" src="">
+        </div>
+        <div class="flip-box">
+            <img class="cards" alt="card" src="images/card-back.png">
+            <img class="cards arcana" alt="card" src="">
         </div>
 
         <div class="flip-box">
-            <div class="flip-box-inner">
-                <div class="flip-box-front">
-                    <img class="cards" alt="card" src="images/card-back.png" >
-                </div>
-                <div class="flip-box-back">
-                    <img class="cards arcana" alt="card" src="" >
-                </div>
-            </div>
+            <img class="cards" alt="card" src="images/card-back.png">
+            <img class="cards arcana" alt="card" src="">
         </div>
 
         <div class="flip-box">
-            <div class="flip-box-inner">
-                <div class="flip-box-front">
-                    <img class="cards" alt="card" src="images/card-back.png" >
-                </div>
-                <div class="flip-box-back">
-                    <img class="cards arcana" alt="card" src="" >
-                </div>
-            </div>
+            <img class="cards" alt="card" src="images/card-back.png">
+            <img class="cards arcana" alt="card" src="">
         </div>
 
         <div class="flip-box">
-            <div class="flip-box-inner">
-                <div class="flip-box-front">
-                    <img class="cards" alt="card" src="images/card-back.png" >
-                </div>
-                <div class="flip-box-back">
-                    <img class="cards arcana" alt="card" src="" >
-                </div>
-            </div>
+            <img class="cards" alt="card" src="images/card-back.png">
+            <img class="cards arcana" alt="card" src="">
         </div>
 
         <div class="flip-box">
-            <div class="flip-box-inner">
-                <div class="flip-box-front">
-                    <img class="cards" alt="card" src="images/card-back.png" >
-                </div>
-                <div class="flip-box-back">
-                    <img class="cards arcana" alt="card" src="" >
-                </div>
-            </div>
+            <img class="cards" alt="card" src="images/card-back.png">
+            <img class="cards arcana" alt="card" src="">
         </div>
 
         <div class="flip-box">
-            <div class="flip-box-inner">
-                <div class="flip-box-front">
-                    <img class="cards" alt="card" src="images/card-back.png" >
-                </div>
-                <div class="flip-box-back">
-                    <img class="cards arcana" alt="card" src="" >
-                </div>
-            </div>
+            <img class="cards" alt="card" src="images/card-back.png">
+            <img class="cards arcana" alt="card" src="">
         </div>
-
-        <div class="flip-box">
-            <div class="flip-box-inner">
-                <div class="flip-box-front">
-                    <img class="cards" alt="card" src="images/card-back.png" >
-                </div>
-                <div class="flip-box-back">
-                    <img class="cards arcana" alt="card" src="" >
-                </div>
-            </div>
-        </div>
-
     </div>
 </div>
 </body>
